Shifted Resume sub-categories and their bullets to the left. Changed resume-sections to set size and in italics. Set past work position to bold, their duration and responsibilities to grey. Fixed navbar to show current location is resume when in resume.html. Got rid of contact.html and using footers as contact section instead.

--- a/SinglePageDesign/Stylesheets/custom.css
+++ b/SinglePageDesign/Stylesheets/custom.css
@@ -57,6 +57,10 @@
     max-height: 100%;
 }
 
+.col-md-8 {
+    text-align: left;
+}
+
  .glyphicon {
     color: white;
     font-size: 32px;
@@ -109,6 +113,6 @@
 }
 
 .row {
-    margin-top: 10vh;
+    margin-top: 2.5vh;
     margin-bottom: 10vh;
 }
